# pygiro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
dashboard/assets/css/: base.css
dashboard/components/: constants.py  figures.py  lib.py  style.py  tables.py
dashboard/pages/: performance.py
pygiro/analytics/: time_series.py
pygiro/api/: assets.py  prices.py
pygiro/degiro/: account.py
pygiro/utils/: config.py  constants.py  mappings.py
