[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygiro"
version = "0.1.0"
description = "A Python toolkit for your DEGIRO brokerage account."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "matplotlib",
    "yfinance",
]

[project.optional-dependencies]
app = [
    "streamlit",
    "plotly",
]
dev = [
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygiro*"]